# lv_sim_vscode_sdl

./: CMakeLists.txt  build.sh  lv_conf.h  lv_drv_conf.h
main/: DisplayApp.h
main/src/: Clock.cpp  Clock.h  Screen.h  hal_init.c  hal_init.h  main.c  main.cpp  test_widgets.cpp  test_widgets.h
main/src/components/: Doubles.cpp  Doubles.h
main/src/components/ble/: BleController.h
main/src/components/datetime/: DateTimeController.cpp  DateTimeController.h
